demos/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monapp
  namespace: dev
  annotations:
    kubernetes.io/change-cause: "version initiale v1 — image nginx 1.24"
spec:
  replicas: 3
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 120
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: monapp
  template:
    metadata:
      labels:
        app: monapp
        version: v1
    spec:
      containers:
        - name: app
          image: nginx:1.24-alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 5
            failureThreshold: 2
---
apiVersion: v1
kind: Service
metadata:
  name: monapp
  namespace: dev
spec:
  selector:
    app: monapp
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30090
  type: NodePort
